feat: Introduce Liquibase for database migration\n\n- Add Liquibase dependency to pom.xml.\n- Configure Liquibase in application.yml.\n- Migrate existing schema.sql and data.sql to Liquibase changelog format.\n- Update Spring Boot version in documentation from 3.2.x to 3.5.x.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,8 @@ spring:
     jdbc:
       table-name: T_SPRING_SESSION # テーブル名を大文字に
       initialize-schema: never # schema.sqlで作成するため
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
 
 # 認可サーバー設定
 # issuer-uriは、リバースプロキシやロードバランサーの外部公開URLに合わせる必要がある
